add cypress - test integration

--- a/src/app/auth/pages/login-layout/login-layout.page.html
+++ b/src/app/auth/pages/login-layout/login-layout.page.html
@@ -27,7 +27,7 @@
         <ion-item>
           <ion-toggle justify="space-between" formControlName="rememberPassword">Recordar</ion-toggle>
         </ion-item>
-        <ion-button expand="full" type="submit">Acceder</ion-button>
+        <ion-button id="button" expand="full" type="submit">Acceder</ion-button>
       </form>
     </ion-list>
   </ion-card>
