--- a/src/app/shared/components/form/form.component.html
+++ b/src/app/shared/components/form/form.component.html
@@ -4,6 +4,7 @@
       <ion-item>
         <ion-icon [name]="field.iconName"></ion-icon>
         <ion-input
+          [name]="field.formControlName"
           [type]="field.type"
           [placeholder]="field.placeholder"
           [formControlName]="field.formControlName"
