--- a/src/app/feature/login-layout/login-layout.page.scss
+++ b/src/app/feature/login-layout/login-layout.page.scss
@@ -22,11 +22,11 @@
     margin-top: 2rem;
 }
 
-ion-list {
+.list {
     padding: 0;
 }
 
-ion-input {
+.input {
     margin-left: 1rem;
 }
 
@@ -34,7 +34,7 @@ ion-input {
     font-size: 0.6rem;
 }
 
-ion-button {
+.btn {
     margin: 0;
 }
 
